<resources>
    <string name="app_name">AN25_MoreNav</string>
    <string name="route_to_more_navigation">Route to More Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_nav">Nav Activity</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_signout">SignOut</string>
    <string name="menu_extra">Extra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure_to_exit">Are you sure to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
</resources>