<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.an25_morenav.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.an25_morenav.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile"  />

    <dialog
        android:id="@+id/nav_Logout"
        android:label="@string/menu_signout"
        tools:layout="@layout/fragment_sign_out"
        android:name="com.example.an25_morenav.ui.signout.SignOutFragment"/>

    <fragment
        android:id="@+id/nav_extra"
        android:label="@string/menu_extra"
        android:name="com.example.an25_morenav.ui.extra.ExtraFragment"
        tools:layout="@layout/fragment_extra"/>
</navigation>